--- a/.env.dev
+++ b/.env.dev
@@ -1,9 +1,19 @@
-MP_DB__USERNAME="mp_dev"
-MP_DB__PASSWORD="mp-dev-password1#"
-MYSQL_ROOT_PASSWORD="mp-dev-password1#"
 MP_ENVIRONMENT="development"
-MP_IEX_SECRET=""
-MP_PLAID_SECRET="69f58490b7157035d4c2eae537577e"
 MP_SECRET="omg money printer go brrr hahaha"
+
+MP_API__USERNAME="mp_dev"
+MP_API__PASSWORD="mp-dev-password1#"
+MP_API__PORT=""
+MP_API__PORT="schema"
+
+MP_STONKS__USERNAME="mp_dev"
+MP_STONKS__PASSWORD="mp-dev-password1#"
+MP_STONKS__PORT=""
+MP_STONKS__PORT="schema"
+
+MYSQL_ROOT_PASSWORD="mp-dev-password1#"
+MP_IEX__SECRET=""
+MP_IEX__PUBLISHABLE: "pk_3394e9ba369a45d2b3efdd6c0bbb168f"
+MP_PLAID__SECRET="69f58490b7157035d4c2eae537577e"
 MP_MAILGUN_API__KEY="key-b3ed602d39bab4981638c7a1f093e893"
 NGROK_AUTH="Fg9CA3nynhBG1ZLWdjzU_35nTmK7VfCooHQnBw7q4m"
