--- a/.env.dev
+++ b/.env.dev
@@ -5,17 +5,21 @@ MP_API__USERNAME="mp_dev"
 MP_API__PASSWORD="mp-dev-password1#"
 MP_API__PORT="5432"
 MP_API__SCHEMA="mp_dev"
+MP_API__DEBUG="false"
 
 MP_STONKS__USERNAME="mp_dev"
 MP_STONKS__PASSWORD="mp-dev-password1#"
 MP_STONKS__PORT="5432"
 MP_STONKS__SCHEMA="mp_stonks"
+MP_STONKS__DEBUG="false"
+
+MP_REDIS__PORT="6379"
 
 MYSQL_ROOT_PASSWORD="mp-dev-password1#"
 POSTGRES_PASSWORD="mp-dev-password1#"
 
-MP_IEX__SECRET=""
+MP_IEX__SECRET="my dev secret"
 MP_IEX__PUBLISHABLE="pk_3394e9ba369a45d2b3efdd6c0bbb168f"
 MP_PLAID__SECRET="69f58490b7157035d4c2eae537577e"
-MP_MAILGUN_API__KEY="key-b3ed602d39bab4981638c7a1f093e893"
+MP_MAILGUN__API_KEY="key-b3ed602d39bab4981638c7a1f093e893"
 NGROK_AUTH="Fg9CA3nynhBG1ZLWdjzU_35nTmK7VfCooHQnBw7q4m"
